--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODKWS3RGvOKmQITRaG8/hO",
+      "authorship_tag": "ABX9TyMdyDyBdfR6FfxPtfvH+5Bp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,35 +56,20 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5",
-        "outputId": "b4db3d7e-a51d-49fe-e0e9-9b5c846b951d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "6FkejEE2crA5"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Erlang/OTP 24 [erts-12.0.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
-            "\n",
-            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
-            "Sat Jun 26 01:41:49 UTC 2021\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2764,11 +2749,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JUlMhsehn1ac",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b8247a40-fea1-4dd0-ff65-e28fc495afaf"
+        "id": "JUlMhsehn1ac"
       },
       "source": [
         "# Stream.unfold の処理は、Enum.reduce と似ている\n",
@@ -2780,26 +2761,13 @@
         "!elixir -e 'IO.inspect fibs = Stream.unfold({1, 1}, fn({n0, n1}) -> {n0, {n1, n0 + n1}} end)'\n",
         "!elixir -e 'fibs = Stream.unfold({1, 1}, fn({n0, n1}) -> {n0, {n1, n0 + n1}} end); IO.inspect Enum.take(fibs, 10)'"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "#Function<61.58486609/2 in Stream.unfold/2>\n",
-            "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ohKucbCNxWs_",
-        "outputId": "ae63be76-34a7-4226-f0c6-a67a5c7b6435",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ohKucbCNxWs_"
       },
       "source": [
         "# えっと、上のコードがわからない\n",
@@ -2811,27 +2779,13 @@
         "# haskell は遅延評価がデフォルトであるが、プログラミング言語としてそれでは困るので、 elixir の enum は先行評価\n",
         "# すると無限が扱えなくなるので、Stream がある、ということか"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-            "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512]\n",
-            "[1000, 500, 250.0, 125.0, 62.5, 31.25, 15.625, 7.8125, 3.90625, 1.953125]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1USg_wk1oqDB",
-        "outputId": "d4e457f6-7ff1-445a-8ec9-f95a23d09066",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1USg_wk1oqDB"
       },
       "source": [
         "# File.stream!/3 は、引数のパスから読み込んだファイルを Stream(File.stream) にする\n",
@@ -2853,29 +2807,8 @@
         "\n",
         "!elixir -e 'stream = File.stream!(\"sample_data/README.md\"); IO.inspect Enum.take(stream, 20)'\n"
       ],
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[\"This directory includes a few sample datasets to get you started.\\n\", \"\\n\",\n",
-            " \"*   `california_housing_data*.csv` is California housing data from the 1990 US\\n\",\n",
-            " \"    Census; more information is available at:\\n\",\n",
-            " \"    https://developers.google.com/machine-learning/crash-course/california-housing-data-description\\n\",\n",
-            " \"\\n\", \"*   `mnist_*.csv` is a small sample of the\\n\",\n",
-            " \"    [MNIST database](https://en.wikipedia.org/wiki/MNIST_database), which is\\n\",\n",
-            " \"    described at: http://yann.lecun.com/exdb/mnist/\\n\", \"\\n\",\n",
-            " \"*   `anscombe.json` contains a copy of\\n\",\n",
-            " \"    [Anscombe's quartet](https://en.wikipedia.org/wiki/Anscombe%27s_quartet); it\\n\",\n",
-            " \"    was originally described in\\n\", \"\\n\",\n",
-            " \"    Anscombe, F. J. (1973). 'Graphs in Statistical Analysis'. American\\n\",\n",
-            " \"    Statistician. 27 (1): 17-21. JSTOR 2682899.\\n\", \"\\n\",\n",
-            " \"    and our copy was prepared by the\\n\",\n",
-            " \"    [vega_datasets library](https://github.com/altair-viz/vega_datasets/blob/4f67bdaad10f45e3549984e17e1b3088c731503d/vega_datasets/_data/anscombe.json).\\n\"]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2910,43 +2843,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dgrgwysf-Qiy",
-        "outputId": "ee521bb9-4d4a-4bad-b221-4c5eba6e146f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Dgrgwysf-Qiy"
       },
       "source": [
         "!elixir -e 'IO.inspect spawn fn -> 1 * 2 end'"
       ],
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "#PID<0.95.0>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fvW6-j3hfuy1"
-      },
-      "source": [
-        "# いまここ"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "dxLiVXQaAG9L",
-        "outputId": "d48f4941-caf2-48e6-880f-822a58a13493",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a3a356e-496e-4aa4-f806-92c18995a50a"
       },
       "source": [
         "# 現在のプロセスの PID を調べるのは self/0 関数である\n",
@@ -2956,7 +2868,7 @@
         "!elixir -e 'IO.inspect pid = spawn fn -> 1 * 2 end'\n",
         "!elixir -e 'pid = spawn fn -> 1 * 2 end; IO.inspect Process.alive?(pid)'\n"
       ],
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2973,11 +2885,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-oScc0yXknua",
-        "outputId": "29f3bd9b-cb73-46ae-c63e-344a466c9f6a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "-oScc0yXknua"
       },
       "source": [
         "# spawn/3 関数を使えば、モジュールの関数からプロセスがつくれる\n",
@@ -2992,36 +2900,59 @@
         "\n",
         "IO.inspect spawn(Example, :add, [2, 3]) #=> 5 #PID<0.99.0>"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s9uroSbv-p_r"
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fvW6-j3hfuy1"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s9uroSbv-p_r",
-        "outputId": "d83f6bda-fb0f-4862-c148-1f228f63964f",
+        "id": "sLVLxSHC-QIS",
+        "outputId": "bedacb13-1acf-494c-fbcc-12d280b06d9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!elixir temp.exs"
+        "# 送信と受信\n",
+        "# send/2 でメッセージを送り、receive/1 で受け取る\n",
+        "# 送られたメッセージはプロセスメールボックスに納められる\n",
+        "# すると、receive/1 ブロックが現在のプロセスメールボックスを探し、パターンにマッチしたメッセージを受け取る\n",
+        "# receive/1 には case/2 と同じように、ガードと複数の句が含められる\n",
+        "\n",
+        "!elixir -e 'IO.inspect send self(), {:hello, \"world\"}' #=> {:hello, \"world\"}\n",
+        "!elixir -e 'send(self(), {:hello, \"world\"}); IO.inspect(receive do {:hello, msg} -> msg; {:world, _msg} -> \"wont match\" end)'\n",
+        "#=> \"world\"\n",
+        "!elixir -e 'send(self(), {:world, \"world\"}); IO.inspect(receive do {:hello, msg} -> msg; {:world, _msg} -> \"wont match\" end)'\n",
+        "#=> \"wont match\""
       ],
-      "execution_count": 16,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5\n",
-            "#PID<0.99.0>\n"
+            "{:hello, \"world\"}\n",
+            "\"world\"\n",
+            "\"wont match\"\n"
           ],
           "name": "stdout"
         }
@@ -3030,24 +2961,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sLVLxSHC-QIS"
+        "id": "1VeNRQTEVnZx"
       },
       "source": [
-        "# 送信と受信\n",
-        "# send/2 でメッセージを送ると、receive/1 で受け取れる\n",
         "\n",
-        "\n",
-        "送られたメッセージはプロセスメールボックスに納められる\n",
-        "すると、receive/1ブロックが現在のプロセスメールボックスを探し、パターンにマッチしたメッセージを受け取るのである\n",
-        "receive/1にはcase/2と同じように、ガードと複数の句が含められる\n",
-        "\n",
-        "!elixir -e 'IO.inspect send self(), {:hello, \"world\"}\n",
-        "{:hello, \"world\"}\n",
-        "!elixir -e 'IO.inspect receive do\n",
-        "...>   {:hello, msg} -> msg\n",
-        "...>   {:world, msg} -> \"won't match\"\n",
-        "...> end\n",
-        "\"world\"\n",
         "パターンに合うメッセージがメールボックスになければ、現在のプロセスはマッチするメッセージが届くまで待つ\n",
         "この場合、タイムアウトも定められる\n",
         "すでにメッセージがあると想定されるなら、値は0にしても構いない\n",
