--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP10iYuAPWoV6iwVLhibnyN",
+      "authorship_tag": "ABX9TyOppuuJN928Qg4Lr7+Y6x2X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,23 +56,23 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6FkejEE2crA5",
-        "outputId": "e10c0661-5ce9-49d9-cfc8-99e3248a2425",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e10c0661-5ce9-49d9-cfc8-99e3248a2425"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2930,15 +2930,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fvW6-j3hfuy1"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "sLVLxSHC-QIS",
@@ -3004,10 +2995,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZSsBf2GZedoi",
-        "outputId": "3d0781d6-89ec-48f6-fc96-a05c39c40bca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3d0781d6-89ec-48f6-fc96-a05c39c40bca"
       },
       "source": [
         "#  2 つのプロセス間でメッセージを送ってみる\n",
@@ -3018,7 +3009,7 @@
         "!elixir -e 'parent = self(); IO.inspect spawn fn -> send(parent, {:hello, self()}) end'\n",
         "!elixir -e 'parent = self(); spawn fn -> send(parent, {:hello, self()}) end; IO.inspect(receive do {:hello, pid} -> \"Got hello from #{inspect pid}\" end)'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3035,10 +3026,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZZB6QJDYAC1v",
-        "outputId": "03b924aa-3a98-4ac5-ef5f-8e78a9c3da8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "03b924aa-3a98-4ac5-ef5f-8e78a9c3da8a"
       },
       "source": [
         "# シェルでメールボックス内のすべてのメッセージを出力して空にするには、ヘルパー関数 flush/0 を使う\n",
@@ -3048,7 +3039,7 @@
         "!elixir -e 'send self(), :hello; send self(), :world; IO.inspect IEx.Helpers.flush()'\n",
         "!elixir -e 'IO.inspect IEx.Helpers.flush()'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3070,10 +3061,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7aPsZJ9vCDeu",
-        "outputId": "3eaec3b0-c4ee-4abb-d06f-bd030682c242",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3eaec3b0-c4ee-4abb-d06f-bd030682c242"
       },
       "source": [
         "# モジュールの関数からつくったプロセスにもメッセージが送れる\n",
@@ -3090,7 +3081,7 @@
         "IO.inspect send pid, {:hello, \"world\"}\n",
         "IO.inspect send pid, {:hello, \"tokyo\"}"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3105,15 +3096,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "_3eaVUSjTpxt",
-        "outputId": "a49fb27f-1f51-4923-97d8-ba11d6accc52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a49fb27f-1f51-4923-97d8-ba11d6accc52"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3131,10 +3122,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jzxNiUnyTlhj",
-        "outputId": "e16e0a93-00e3-4e73-d0e6-3cbe4f76f5dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e16e0a93-00e3-4e73-d0e6-3cbe4f76f5dc"
       },
       "source": [
         "# 関数を再帰呼び出しすれば処理は終わらず、何度でもメッセージが送れる\n",
@@ -3151,7 +3142,7 @@
         "IO.inspect send pid, {:hello, \"world\"}\n",
         "IO.inspect send pid, {:hello, \"tokyo\"}"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3166,15 +3157,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "NR9b5bc7UQgj",
-        "outputId": "c6358a01-1274-4e33-ae71-a4c5dab90962",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c6358a01-1274-4e33-ae71-a4c5dab90962"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3190,9 +3181,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fvW6-j3hfuy1"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "KjMTdC_LUHpO"
+        "id": "KjMTdC_LUHpO",
+        "outputId": "cbf7a426-73f9-44a9-e001-9e603712823b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# リンク\n",
@@ -3201,21 +3205,44 @@
         "# raise/1 で RuntimeError の例外を起こしても、エラーが記録されるだけで、親プロセスは動いている\n",
         "# それは、プロセスが互いに切り離されているからである\n",
         "\n",
-        "!elixir -e 'IO.inspect spawn fn -> raise \"oops\" end#PID\n",
-        "<0.86.0>\n",
-        "iex>\n",
-        "[error] Process #PID<0.86.0> raised an exception\n",
-        "** (RuntimeError) oops\n",
-        "    (stdlib) erl_eval.erl:668: :erl_eval.do_apply/6\n",
-        "あるプロセスの失敗を他に伝えるには、それらをリンクしなければならないのである\n",
-        "そのためには、spawn_link/1を用いて現在のプロセスにリンクする\n",
+        "!elixir -e 'IO.inspect spawn fn -> raise \"oops\" end#PID'"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#PID<0.95.0>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PyQ9GFWDuwAH"
+      },
+      "source": [
+        "# あるプロセスの失敗を他に伝えるには、それらをリンクしなければならない\n",
+        "# そのためには、spawn_link/1 を用いて現在のプロセスにリンクする\n",
+        "# 次のコードでは、spawn_link/1 で親プロセスのシェルにリンクした\n",
+        "# そのため、子プロセスの例外から、親のシェルが EXIT の通知を受け取った\n",
+        "# IExはシェルの終了を検知し、新たなセッションが始まる\n",
         "\n",
+        "!elixir -e 'IO.inspect self()'\n",
+        "!elixir -e 'IO.inspect spawn_link fn -> raise \"oops\" end'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T1eDJgCnvAqJ"
+      },
+      "source": [
         "\n",
-        "次のコードでは、spawn_link/1で親プロセスのシェルにリンクした\n",
-        "そのため、子プロセスの例外から、親のシェルがEXITの通知を受け取ったのである\n",
-        "IExはシェルの終了を検知し、新たなセッションがはじまります\n",
-        "\n",
-        "!elixir -e 'IO.inspect self()\n",
         "#PID<0.84.0>\n",
         "!elixir -e 'IO.inspect spawn_link fn -> raise \"oops\" end\n",
         "** (EXIT from #PID<0.84.0>) shell process exited with reason: an exception was raised:\n",
