--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOppuuJN928Qg4Lr7+Y6x2X",
+      "authorship_tag": "ABX9TyP8H97ksYYI6aVI7NWfpEy2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 48,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2858,13 +2858,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dgrgwysf-Qiy"
+        "id": "Dgrgwysf-Qiy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b72ebedd-c78b-4fd9-89b3-287e0e52026b"
       },
       "source": [
         "!elixir -e 'IO.inspect spawn fn -> 1 * 2 end'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#PID<0.95.0>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2873,7 +2885,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a3a356e-496e-4aa4-f806-92c18995a50a"
+        "outputId": "4ff844b9-271b-4b94-8d69-08559a9f71de"
       },
       "source": [
         "# 現在のプロセスの PID を調べるのは self/0 関数である\n",
@@ -2883,7 +2895,7 @@
         "!elixir -e 'IO.inspect pid = spawn fn -> 1 * 2 end'\n",
         "!elixir -e 'pid = spawn fn -> 1 * 2 end; IO.inspect Process.alive?(pid)'\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,7 +2912,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-oScc0yXknua"
+        "id": "-oScc0yXknua",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8d73b088-ebce-4c53-e7ba-dece95539da8"
       },
       "source": [
         "# spawn/3 関数を使えば、モジュールの関数からプロセスがつくれる\n",
@@ -2915,19 +2931,40 @@
         "\n",
         "IO.inspect spawn(Example, :add, [2, 3]) #=> 5 #PID<0.99.0>"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s9uroSbv-p_r"
+        "id": "s9uroSbv-p_r",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe7e90f4-08a4-4faf-e176-a6eb1a42ae2a"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "#PID<0.99.0>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2936,7 +2973,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bedacb13-1acf-494c-fbcc-12d280b06d9d"
+        "outputId": "98ea6e58-43ed-4048-e203-3cd54a01af07"
       },
       "source": [
         "# 送信と受信\n",
@@ -2951,7 +2988,7 @@
         "!elixir -e 'send(self(), {:world, \"world\"}); IO.inspect(receive do {:hello, msg} -> msg; {:world, _msg} -> \"wont match\" end)'\n",
         "#=> \"wont match\""
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2971,7 +3008,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "06dba07a-7a9f-4a7e-b92e-f9a166cf1fd5"
+        "outputId": "f7caa1ab-eb3a-4fa1-df5a-d12a41196d00"
       },
       "source": [
         "# パターンに合うメッセージがメールボックスになければ、現在のプロセスはマッチするメッセージが届くまで待つ\n",
@@ -2980,7 +3017,7 @@
         "# なお、数値には桁区切りのためにアンダースコア_を加えることができる\n",
         "!elixir -e 'IO.inspect(receive do {:hello, msg}  -> msg; after 1_000 -> \"nothing after 1s\" end)' #=> \"nothing after 1s\""
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2998,7 +3035,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d0781d6-89ec-48f6-fc96-a05c39c40bca"
+        "outputId": "aa6a38ff-0f54-48d6-8399-f994d0a2e207"
       },
       "source": [
         "#  2 つのプロセス間でメッセージを送ってみる\n",
@@ -3009,7 +3046,7 @@
         "!elixir -e 'parent = self(); IO.inspect spawn fn -> send(parent, {:hello, self()}) end'\n",
         "!elixir -e 'parent = self(); spawn fn -> send(parent, {:hello, self()}) end; IO.inspect(receive do {:hello, pid} -> \"Got hello from #{inspect pid}\" end)'"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -3029,17 +3066,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03b924aa-3a98-4ac5-ef5f-8e78a9c3da8a"
+        "outputId": "cf417606-5114-47d6-a65b-b5d361726db2"
       },
       "source": [
         "# シェルでメールボックス内のすべてのメッセージを出力して空にするには、ヘルパー関数 flush/0 を使う\n",
+        "# iex 上では flush() で機能するが、コマンドラインワンライナー上では IEx.Helpers.flush() とする\n",
+        "# 参照 !elixir -e 'require IEx.Helpers; IEx.Helpers.h(IEx.Helpers)' \n",
+        "# require IEx.Helpers をする必要はないみたい\n",
         "!elixir -e 'IO.inspect send self(), :hello'\n",
         "!elixir -e 'send self(), :hello; IO.inspect send self(), :world'\n",
         "!elixir -e 'send self(), :hello; send self(), :world; IEx.Helpers.flush()'\n",
         "!elixir -e 'send self(), :hello; send self(), :world; IO.inspect IEx.Helpers.flush()'\n",
         "!elixir -e 'IO.inspect IEx.Helpers.flush()'"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -3064,7 +3104,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3eaec3b0-c4ee-4abb-d06f-bd030682c242"
+        "outputId": "e840c97f-9066-4dce-ca49-08ba2b844ec3"
       },
       "source": [
         "# モジュールの関数からつくったプロセスにもメッセージが送れる\n",
@@ -3081,7 +3121,7 @@
         "IO.inspect send pid, {:hello, \"world\"}\n",
         "IO.inspect send pid, {:hello, \"tokyo\"}"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -3099,12 +3139,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a49fb27f-1f51-4923-97d8-ba11d6accc52"
+        "outputId": "36370408-ffaf-4d6d-d092-2373c4ba7f99"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -3125,7 +3165,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e16e0a93-00e3-4e73-d0e6-3cbe4f76f5dc"
+        "outputId": "1df0acc1-57fb-413a-dc60-2aef4f730de9"
       },
       "source": [
         "# 関数を再帰呼び出しすれば処理は終わらず、何度でもメッセージが送れる\n",
@@ -3142,7 +3182,7 @@
         "IO.inspect send pid, {:hello, \"world\"}\n",
         "IO.inspect send pid, {:hello, \"tokyo\"}"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -3160,12 +3200,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c6358a01-1274-4e33-ae71-a4c5dab90962"
+        "outputId": "ac7c8dc8-57c5-488d-c828-1e6f682364d3"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -3193,10 +3233,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "KjMTdC_LUHpO",
-        "outputId": "cbf7a426-73f9-44a9-e001-9e603712823b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cbf7a426-73f9-44a9-e001-9e603712823b"
       },
       "source": [
         "# リンク\n",
@@ -3231,7 +3271,11 @@
         "# IExはシェルの終了を検知し、新たなセッションが始まる\n",
         "\n",
         "!elixir -e 'IO.inspect self()'\n",
-        "!elixir -e 'IO.inspect spawn_link fn -> raise \"oops\" end'"
+        "!elixir -e 'IO.inspect spawn_link fn -> raise \"oops\" end'\n",
+        "#=> #PID<0.94.0>\n",
+        "#=> ** (EXIT from #PID<0.94.0>) an exception was raised:\n",
+        "#=>     ** (RuntimeError) oops\n",
+        "#=>         (stdlib 3.15.1) erl_eval.erl:683: :erl_eval.do_apply/6\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -3239,35 +3283,74 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T1eDJgCnvAqJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T1eDJgCnvAqJ",
+        "outputId": "3c58f6ac-97a9-4c4f-ff92-3a5575e31d50"
       },
       "source": [
-        "\n",
-        "#PID<0.84.0>\n",
-        "!elixir -e 'IO.inspect spawn_link fn -> raise \"oops\" end\n",
-        "** (EXIT from #PID<0.84.0>) shell process exited with reason: an exception was raised:\n",
-        "    ** (RuntimeError) oops\n",
-        "        (stdlib) erl_eval.erl:668: :erl_eval.do_apply/6\n",
-        "\n",
-        "[error] Process #PID<0.90.0> raised an exception\n",
-        "** (RuntimeError) oops\n",
-        "    (stdlib) erl_eval.erl:668: :erl_eval.do_apply/6\n",
-        "spawn_link/3関数を使うと、モジュールの関数からプロセスがリンクでく\n",
-        "引数はモジュールと関数、および渡す引数のリストである\n",
-        "exit/1は、呼び出したプロセスを終了する\n",
-        "そのとき、引数が理由として示される\n",
-        "\n",
+        "# spawn_link/3 関数を使うと、モジュールの関数からプロセスがリンクできる\n",
+        "# 引数はモジュールと関数、および渡す引数のリストである\n",
+        "# exit/1 は、呼び出したプロセスを終了する\n",
+        "# そのとき、引数が理由として示される\n",
+        "%%writefile temp.exs\n",
         "defmodule Example do\n",
         "  def explode, do: exit(:boom)\n",
         "end\n",
-        "!elixir -e 'IO.inspect spawn(Example, :explode, [])\n",
-        "#PID<0.89.0>\n",
-        "!elixir -e 'IO.inspect spawn_link(Example, :explode, [])\n",
-        "** (EXIT from #PID<0.87.0>) shell process exited with reason: :boom\n",
-        "リンクした現在のプロセスを落としたくない場合には、Process.flag/2を用いる\n",
-        "第1引数にフラグ:trap_exit、第2引数の値にtrueを与えると、終了が止められるのである\n",
-        "この関数はerlangのprocess_flag/2によりフラグを定めている(「Receiving Exit Signals」参照)\n",
-        "終了を止めると、{:EXIT, from_pid, reason}というタプルでメッセージが受け取られる\n",
+        "IO.inspect spawn(Example, :explode, [])\n",
+        "#=> #PID<0.99.0>\n",
+        "IO.inspect spawn_link(Example, :explode, [])\n",
+        "#=> #PID<0.100.0>\n",
+        "#=> ** (EXIT from #PID<0.94.0>) :boom"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jDqTEXBlsrmu",
+        "outputId": "e48fa334-23dd-49c5-ee8f-2298c3785373",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#PID<0.99.0>\n",
+            "#PID<0.100.0>\n",
+            "** (EXIT from #PID<0.94.0>) :boom\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rAGoeRr2spKn"
+      },
+      "source": [
+        "# リンクした現在のプロセスを落としたくない場合には、Process.flag/2 を用いる\n",
+        "# 第 1 引数にフラグ :trap_exit、第 2 引数の値に true を与えると、終了が止められる\n",
+        "# この関数は erlang の process_flag/2 によりフラグを定めている(「Receiving Exit Signals」参照)\n",
+        "# 終了を止めると、{:EXIT, from_pid, reason}というタプルでメッセージが受け取られる\n",
         "\n",
         "defmodule Example do\n",
         "  def explode, do: exit(:boom)\n",
