--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP2UQVaBAEEDuVkr2BvJyu4",
+      "authorship_tag": "ABX9TyMv6JKAA5mUEme1BXpwexj0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3845,15 +3845,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lPS6hJXIfwrb"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "ZRtrruqlgfOJ"
       },
       "source": [
@@ -3918,16 +3909,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "ncEKoYUFwK2d",
-        "outputId": "d7199730-01ed-459e-c3f6-2b14476901e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d7199730-01ed-459e-c3f6-2b14476901e6"
       },
       "source": [
         "# 上のを標準入力に変えられないか実験\n",
         "!echo \"hello\" | elixir -e 'temp = IO.gets \"yes or no?    \"; IO.puts temp'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3943,18 +3934,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "3SDnykoi7gLF",
-        "outputId": "3ed57968-d271-4ca0-b2b6-1a2f15ba7d9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3ed57968-d271-4ca0-b2b6-1a2f15ba7d9d"
       },
       "source": [
-        "# 第1引数に:stderrを与えると、標準エラーが入出力先になる\n",
+        "# 第1引数に :stderr を与えると、標準エラーが入出力先になる\n",
         "\n",
         "# !elixir -e 'IO.puts  \"hello world\"'\n",
         "!elixir -e 'IO.puts :stderr, \"hello world\"'"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3969,17 +3960,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "J1uxLbGSxSTd",
-        "outputId": "9235ca9c-76df-409b-f26d-ff67113c277f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9235ca9c-76df-409b-f26d-ff67113c277f"
       },
       "source": [
         "# 実験\n",
         "!elixir -e 'temp=IO.puts :stderr, \"hello world\"; IO.puts temp'\n",
         "!elixir -e 'temp=IO.puts \"hello world\"; IO.puts temp'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4008,15 +3999,40 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "_yRAyzVVx7PW"
+        "id": "lPS6hJXIfwrb"
       },
       "source": [
-        ""
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_yRAyzVVx7PW",
+        "outputId": "b1b237a4-8187-4327-a21d-3ed8aa6b7a3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e '{:ok, file} = File.open(\"hello\", [:write])'\n",
+        "!elixir -e '{:ok, file} = File.open(\"hello.txt\", [:write]);IO.binwrite(file, \"world\")'\n",
+        "!ls\n",
+        "!cat hello*"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "erlang-solutions_2.0_all.deb  hello  hello.txt\tsample_data\n",
+            "world"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
