--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOPbY8L7GxrsinFUANbmlXx",
+      "authorship_tag": "ABX9TyMi+Xy2u4/3mbgdkWLVdmsH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3864,12 +3864,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e298110-242b-4dc9-91eb-5ad1756ecd44"
+        "outputId": "c68df68e-c085-4a2b-c193-8665fbdea66d"
       },
       "source": [
         "!elixir -e 'IO.puts \"hello world\"'"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -3883,27 +3883,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3po7NqREhMwX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "76673e58-4922-49aa-eada-d9fa3c0eecad"
+        "id": "3po7NqREhMwX"
       },
       "source": [
         "# 次のはユーザー入力を待つ\n",
         "# !elixir -e 'IO.gets \"yes or no? \"'\n"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "yes or no? hello\n",
-            "yes or no? \n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3912,13 +3899,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7199730-01ed-459e-c3f6-2b14476901e6"
+        "outputId": "396d7039-d913-48bf-c435-e7fef50cec53"
       },
       "source": [
         "# 上のを標準入力に変えられないか実験\n",
         "!echo \"hello\" | elixir -e 'temp = IO.gets \"yes or no?    \"; IO.puts temp'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -3937,7 +3924,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ed57968-d271-4ca0-b2b6-1a2f15ba7d9d"
+        "outputId": "df99c4e0-8672-471d-d195-42b621aa8e02"
       },
       "source": [
         "# 第1引数に :stderr を与えると、標準エラーが入出力先になる\n",
@@ -3945,7 +3932,7 @@
         "# !elixir -e 'IO.puts  \"hello world\"'\n",
         "!elixir -e 'IO.puts :stderr, \"hello world\"'"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -3963,14 +3950,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9235ca9c-76df-409b-f26d-ff67113c277f"
+        "outputId": "73fe5917-05d2-4a62-c7d6-4e4b5b3973c1"
       },
       "source": [
         "# 実験\n",
         "!elixir -e 'temp=IO.puts :stderr, \"hello world\"; IO.puts temp'\n",
         "!elixir -e 'temp=IO.puts \"hello world\"; IO.puts temp'"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -3999,22 +3986,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lPS6hJXIfwrb"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "_yRAyzVVx7PW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1b237a4-8187-4327-a21d-3ed8aa6b7a3a"
+        "outputId": "51bd464d-bf57-4b8f-b5e9-1578c4c7b807"
       },
       "source": [
         "!elixir -e '{:ok, file} = File.open(\"hello\", [:write])'\n",
@@ -4022,7 +4000,7 @@
         "!ls\n",
         "!cat hello*"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -4038,16 +4016,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "fZGQlX0glm8r",
-        "outputId": "e70699f7-5a2a-43e3-a84c-80eb850e3858",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f4fc0f7b-6460-4168-e799-a080d79c9b06"
       },
       "source": [
         "!elixir -e '{:ok, file} = File.open(\"hello.txt\", [:write]);IO.binwrite(file, \"world\");File.close(file); IO.inspect File.read(\"hello.txt\")'\n",
         "!elixir -e '{:ok, file} = File.open(\"hello.txt\", [:write]);IO.binwrite(file, \"world\");File.close(file); IO.inspect File.read(\"nofile\")'"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -4063,15 +4041,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q_Ct8kFzmIAN",
-        "outputId": "14d5f7a7-f3ad-415b-8a12-b512c75fbc95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "40ce4b2f-d761-4e74-cc25-b32b5d0c4bfd"
       },
       "source": [
         "!elixir -e '{:ok, file} = File.open(\"hello.txt\", [:write]);IO.binwrite(file, \"world\");File.close(file); IO.inspect File.open(\"hello.txt\")'"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -4086,20 +4064,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "mUFaqrRRm91R",
-        "outputId": "313e9534-643f-40a8-ce99-80ac43cfb682",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4ac1128e-c596-4859-912a-98c13f754748"
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "erlang-solutions_2.0_all.deb  hello.txt  sample_data\n"
+            "erlang-solutions_2.0_all.deb  hello  hello.txt\tsample_data\n"
           ],
           "name": "stdout"
         }
@@ -4109,15 +4087,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "fYNdYvbImRyU",
-        "outputId": "a6a0a70c-5315-4c70-c9d0-7ecc89bc69af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8a43605-5c3e-4202-b6c1-1a4065ad59f2"
       },
       "source": [
         "!elixir -e '{:ok, file} = File.open(\"hello.txt\", [:read]); IO.inspect IO.binread(file, :line)'"
       ],
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -4152,9 +4130,17 @@
         "\n",
         "* ファイルを開くモードには :utf8 も加えられる\n",
         "* File モジュールに、ファイルから読み込むバイトを UTF-8 のエンコードで解析する* ための指定である\n",
-        "\n",
-        "\n",
-        "* Fileモジュールには、ファイルシステムを操作する関数も備わっている\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_EbNdPWBIvjT"
+      },
+      "source": [
+        "---\n",
+        "Fileモジュールには、ファイルシステムを操作する関数も備わっている\n",
         "* 関数の名前は UNIX のコマンドに沿ってつけられている\n",
         "\n",
         "\n",
@@ -4170,13 +4156,44 @@
         "* File.cp_r/2 : ディレクトリの内容をサブディレクトリまで含めてコピーする\n",
         "\n",
         "* File.rm_rf/1 : ディレクトリの内容をサブディレクトリまで含めて削除する\n",
-        "\n",
-        "\n",
-        "* Fileモジュールの関数には、同じ名前で最後に! 記号のつくものとつかないものがあ* る\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8zBbTQZ-I0Ar"
+      },
+      "source": [
+        "Fileモジュールの関数には、同じ名前で最後に! 記号のつくものとつかないものがある\n",
         "* たとえば、File.read/1 とFile.read!/1 である\n",
         "* 前者はタプルを返す\n",
         "* 後者はファイルの中身が返るか、そうでなければエラーが起こる"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lPS6hJXIfwrb"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rpq3y4SOJAlt"
+      },
+      "source": [
+        "!elixir -e '{:ok, file} = File.open(\"hello.txt\", [:write]);IO.binwrite(file, \"world\");File.close(file)'\n",
+        "!elixir -e 'IO.inspect File.read(\"hello.txt\")' #=> {:ok, \"world\"}\n",
+        "!elixir -e 'IO.inspect File.read!(\"hello.txt\")' #=> \"world\"\n",
+        "!elixir -e 'IO.inspect File.read(\"unknown\")' #=> {:error, :enoent}\n",
+        "!elixir -e 'IO.inspect File.read!(\"unknown\")' #=> ** (File.Error) could not read file \"unknown\": no such file or directory"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4184,19 +4201,8 @@
         "id": "JTDcoOvFoBoW"
       },
       "source": [
-        "\n",
-        "\n",
-        "!elixir -e 'File.read(\"hello\")\n",
-        "{:ok, \"world\"}\n",
-        "!elixir -e 'File.read!(\"hello\")\n",
-        "\"world\"\n",
-        "!elixir -e 'File.read(\"unknown\")\n",
-        "{:error, :enoent}\n",
-        "!elixir -e 'File.read!(\"unknown\")\n",
-        "** (File.Error) could not read file \"unknown\": no such file or directory\n",
-        "    (elixir) lib/file.ex:310: File.read!/1 \n",
-        "タプルを返す関数は、戻り値にパターンマッチングが使えます\n",
-        "\n",
+        "# タプルを返す関数は、戻り値にパターンマッチングが使える\n",
+        "%%writefile temp.exs\n",
         "defmodule Example do\n",
         "  def read_file(file) do\n",
         "    case File.read(file) do\n",
@@ -4211,7 +4217,7 @@
         "!elixir -e 'Example.read_file(\"unknown\")\n",
         "error: enoent\n",
         ":ok\n",
-        "ファイルが存在する前提であれば、File.read!/1 の方が端的である\n",
+        "ファイルが存在する前提であれば、File.read!/1 の方が直接的である\n",
         "万が一ファイルがなかったとき、パターンマッチングではマッチしないというエラーになる\n",
         "File.read!/1 であれば、エラーメッセージにファイルの存在しないことが示されるからである\n",
         "\n",
