--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNXV4sA/kZ0gyoXO/dnVSxR",
+      "authorship_tag": "ABX9TyObsDhKdAv0ysGs0fGt3c5I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4280,15 +4280,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lPS6hJXIfwrb"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "aeLEG9NkAOgU"
       },
       "source": [
@@ -4328,55 +4319,79 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "lDFnJy_OAfIL"
       },
       "source": [
+        "* パスの扱いは、文字列を直に操作するのでなく、Pathモジュールの関数を使う方がよい\n",
+        "* オペレーティングシステムの違いが吸収されるから\n",
+        "* ファイルを操作するとき、パスの中のスラッシュ / は、Windowsでは自動的にバックスラッシュ \\ に変換される\n",
         "\n",
-        "!elixir -e 'Path.join(\"elixir\", \"test\")\n",
-        "\"elixir/test\"\n",
-        "!elixir -e 'Path.expand(\"/elixir/test/../config\")\n",
-        "\"/elixir/config\"\n",
-        "パスの扱いは、文字列を直に操作するのでなく、Pathモジュールの関数を使う方がよいでしょう\n",
-        "オペレーティングシステムの違いが吸収されるからである\n",
-        "ファイルを操作するとき、パスの中のスラッシュ/は、Windowsでは自動的にバックスラッシュ \\ に変換される\n",
+        "---\n",
+        "* 入出力とファイルシステムの操作に関わる主なモジュールのご説明は以上\n",
+        "* このあとは、入出力についての少し進んだ話題を扱う\n",
+        "* Elixir のコードを書くための解説ではないので、飛ばしても構わない\n",
+        "* VM の中で IO システムがどのように実装されているかを解説する\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uYfNN-JXjHxq"
+      },
+      "source": [
+        "# プロセスとグループリーダー\n",
+        "# File.open/2 はタプルを返す\n",
+        "# これは IO モジュールが、内部的にプロセスに働きかけるから\n",
         "\n",
+        "!elixir -e 'IO.inspect {:ok, file} = File.open \"hello\", [:write]' #=> {:ok, #PID<0.95.0>}\n",
         "\n",
-        "入出力とファイルシステムの操作に関わる主なモジュールのご説明は以上である\n",
-        "このあとは、入出力についての少し進んだ話題を扱いる\n",
-        "Elixirのコードを書くための解説ではないので、飛ばしても構わない\n",
-        "VMの中で IO システムがどのように実装されているかを解説する\n",
-        "\n",
-        "\n",
-        "プロセスとグループリーダー\n",
-        "File.open/2 はタプルを返する\n",
-        "これは IO モジュールが、内部的にプロセスに働きかけるからである\n",
-        "\n",
-        "!elixir -e '{:ok, file} = File.open \"hello\", [:write]\n",
-        "{:ok, #PID<0.47.0>}\n",
-        "たとえば、IO.write/2 を使うと、 IOモジュールが PID で参照されるプロセスにメッセージを送り、操作が行われる\n",
-        "出力される4要素のタプルがそのメッセージである\n",
-        "そのあと、IOモジュールの求める結果が与えられなかったために失敗している\n",
-        "\n",
-        "!elixir -e 'pid = spawn fn ->\n",
-        "...>   receive do: (msg -> IO.inspect msg)\n",
-        "...> end\n",
-        "#PID<0.89.0>\n",
-        "!elixir -e 'IO.write(pid, \"hello\")\n",
-        "{:io_request, #PID<0.84.0>, #Reference<0.3003912951.510132227.213667>,\n",
-        " {:put_chars, :unicode, \"hello\"}}\n",
-        "** (ErlangError) Erlang error: :terminated\n",
-        "    (stdlib) :io.put_chars(#PID<0.89.0>, :unicode, \"hello\")\n",
-        "StringIOモジュールは、文字列に入出力デバイスの操作を実装する\n",
-        "StringIOは入出力デバイスになり、IOモジュールの関数が使えるのである\n",
-        "StringIO.open/2 は入出力デバイスをつくり、IO.read/2 はその参照から第2引数の文字数を読み込みます\n",
+        "# たとえば、IO.write/2 を使うと、 IOモジュールが PID で参照されるプロセスにメッセージを送り、操作が行われる\n",
+        "# 出力される 4 要素のタプルがそのメッセージである"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WhnZ_yd9jtj3"
+      },
+      "source": [
+        "# 次の例では IO モジュールの求める結果が与えられなかったために失敗している\n",
+        "!elixir -e 'IO.inspect pid = spawn fn -> receive do: (msg -> IO.inspect msg) end'\n",
+        "!elixir -e 'pid = spawn fn -> receive do: (msg -> IO.inspect msg) end; IO.write(pid, \"hello\")'\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lPS6hJXIfwrb"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0RElp_qliXS8"
+      },
+      "source": [
+        "# StringIO モジュールは、文字列に入出力デバイスの操作を実装する\n",
+        "# StringIO は入出力デバイスになり、IO モジュールの関数が使える\n",
+        "# StringIO.open/2 は入出力デバイスをつくり、IO.read/2 はその参照から第 2 引数の文字数を読み込む\n",
         "\n",
         "!elixir -e '{:ok, pid} = StringIO.open(\"hello\")\n",
         "{:ok, #PID<0.96.0>}\n",
         "!elixir -e 'IO.read(pid, 4)\n",
         "\"hell\"\n",
-        "Erlang VMは入出力デバイスをプロセスでモデル化することにより、同じネットワークの異なるノードがファイルの操作をやり取りして、ノード間でファイルを読み書きできるようにしている\n",
+        "Erlang VMは入出力デバイスをプロセスでモデル化することにより、\n",
+        " 同じネットワークの異なるノードがファイルの操作をやり取りして、ノード間でファイルを読み書きできるようにしている\n",
         "\n",
         "\n",
         "すべての IO デバイスは、プロセスにひとつ特別なグループリーダーを持つ\n",
